fix: login and register spacing

--- a/src/pages/Register/index.module.css
+++ b/src/pages/Register/index.module.css
@@ -15,3 +15,10 @@
 .logInTitle {
   align-self: center;
 }
+
+@media (max-width: 768px) {
+  .logInBox {
+    width: 75%;
+    padding: 20px;
+  }
+}
